syntax = "proto3";

import "auth.proto";
import "consensus.proto";
import "common.proto";

message BroadcastProposalReq {
  Proposal proposal = 1;
  bytes signature = 2;
}

message BroadcastVotelReq {
  Vote vote = 1;
  bytes signature = 2;
}

message BroadcastTransactionReq {
  UnverifiedTransaction untx = 1;
}

message ReceiverReq {
  string method = 1;
  bytes data = 2;
}

message ReceiverRes {
  string method = 1;
  bytes data = 2;
}

service Network {
  rpc BroadcastProposal(BroadcastProposalReq) returns (Empty) {}
  rpc BroadcastVote(BroadcastVotelReq) returns (Empty) {}
  rpc BroadcastTransaction(BroadcastTransactionReq) returns (Empty) {}

  rpc SetProposal(SetProposalReq) returns (Empty) {}
  rpc AddVote(AddVoteReq) returns (Empty) {}
  rpc AddUnverifyTx (AddUnverifyTxReq) returns (AddUnverifyTxRes) {}
  rpc GetUnverifyTxs(GetUnverifyTxsReq) returns (GetUnverifyTxsRes) {}
}
